[project]
name = "12-03-25group"
version = "0.1.0"
description = ""
authors = [
    {name = "Artem",email = "artem.chebanyuk@gmail.com@email.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]

[tool.poetry]
packages = [{include = "12"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
